--- a/src/app/classes/record-class/record-class.component.html
+++ b/src/app/classes/record-class/record-class.component.html
@@ -35,7 +35,7 @@
     <video [src]="record.videoUrl" controls></video>
     <div class="card-body">
       <h5 class="card-title fw-bold text-primary">{{ record.courseName }}</h5>
-      <!-- <p class="card-text text-muted">✍️ {{ record.lesson }}</p> -->
+       <p class="card-text text-muted">Lesson:{{ record.lessonId }}</p>
     </div>
   </div>
 </div>
