--- a/src/app/courses/course-list/course-list.component.css
+++ b/src/app/courses/course-list/course-list.component.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 .table thead th {
-  background-color: #f8f9fa;
+  background-color: #c7dfa2 ;
   color: #343a40;
   font-weight: bold;
   text-align: center;
