--- a/src/app/feedbacks/feedback-form/feedback-form.component.html
+++ b/src/app/feedbacks/feedback-form/feedback-form.component.html
@@ -22,10 +22,10 @@
           <input type="hidden" name="id" [(ngModel)]="feedbacks.id" hidden /><br />
 
           <!-- Student Title Field -->
-          <div>
+          <!-- <div>
             <label for="studentId">Student Name</label>
             <input type="text" id="studentId" name="studentId" [(ngModel)]="feedbacks.studentId" required readonly />
-          </div>
+          </div> -->
 
           <!-- Feedback Field -->
           <div>
