--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -3,7 +3,7 @@
 <div class="sidebar">
   <ul class="list-unstyled">
     <li>
-      <a href="/adminProfile">
+      <a href="/profile">
         <i class="bi bi-person-circle" width="25" height="25"></i> Profile
         <!-- <i class="bi bi-chevron-right" style="float: right;"></i> -->
       </a>
