--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -37,8 +37,8 @@
         </svg>  Bookstore</a></li> -->
 
     <li>
-      <a href="/studentlist">
-        <i class="bi bi-mortarboard-fill"></i> Students
+      <a href="/faq">
+        <i class="bi bi-mortarboard-fill"></i> Message
       </a>
     </li>
     <li>
