--- a/src/app/feedbacks/feedback/feedback.component.html
+++ b/src/app/feedbacks/feedback/feedback.component.html
@@ -59,7 +59,7 @@
         <!-- User Image -->
         <img
           [src]="feedback.image"
-          class="card-img-top img-fluid user-image"
+          class="card-img-top img-fluid user-image" style="height: 100px; width: 100px;"
           alt="{{ feedback.studentName }}"
         />
 
