--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,7 +31,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/contact">Contact</a></li>
-            <li><a class="dropdown-item" href="#">FAQ</a></li>
+            <!-- <li><a class="dropdown-item" href="faq">FAQ</a></li> -->
             <li><a class="dropdown-item" href="/termsCondition">Terms & Conditions</a></li>
             <li><a class="dropdown-item" href="#">About</a></li>
 
