--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -18,23 +18,54 @@
     <h5><a href="#">educare&#64;info.com</a></h5>
   </div><br>
     <div>
-      <form action="">
+      <!-- <form (ngSubmit)="saveContact()" class="course-form">
         <div>
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
+           <input type="text" name="name" [(ngModel)]="contacts.name" required class="form-input" />
+
         </div>
 
         <div>
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="email" name="email" [(ngModel)]="contacts.email" required>
         </div>
 
         <div>
           <label for="message">Message:</label>
-          <textarea name="message" id="message"></textarea>
+          <textarea name="message" id="message"  [(ngModel)]="contacts.message"></textarea>
         </div>
         <button type="submit">Submit</button>
 
-      </form>
+      </form> -->
+
+       <form (ngSubmit)="saveContact()" class="course-form">
+    <div>
+      <label for="name">Name:</label>
+      <input
+        type="text"
+        name="name"
+        [(ngModel)]="contact.name"
+        required
+        class="form-input"
+      />
+    </div>
+
+    <div>
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        [(ngModel)]="contact.email"
+        required
+      />
+    </div>
+
+    <div>
+      <label for="message">Message:</label>
+      <textarea name="message" id="message" [(ngModel)]="contact.message"></textarea>
+    </div>
+    <button type="submit">Submit</button>
+  </form>
     </div>
   </div>
