--- a/src/app/students/student-dashboard/student-dashboard.component.html
+++ b/src/app/students/student-dashboard/student-dashboard.component.html
@@ -1,3 +1,12 @@
+<div>
+  <div class="image">
+
+
+<img src="https://images.unsplash.com/photo-1699347914988-c61ec13c99c5?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZWR1Y2F0aW9uJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D" alt="">
+ </div>
+<div class="row">
+  <div class="imageOverlay">
+  <div class="col-3">
 <div class="sidebar">
   <ul class="list-unstyled">
     <li>
@@ -7,13 +16,13 @@
       </a>
     </li>
     <li>
-      <a href="/courselist">
+      <a href="/courses">
         <i class="bi bi-incognito"></i> My Courses
       </a>
     </li>
     <li>
-      <a href="/instructorlist">
-        <i class="bi bi-person-fill"></i> Instructors
+      <a href="/contact">
+        <i class="bi bi-person-fill"></i> Contact
       </a>
     </li>
 
@@ -28,12 +37,23 @@
 
 
 
-    <li><a href="#">
+    <li><a href="studentrecordClasses">
         <i class="bi bi-play-btn-fill"></i> Record Classes</a></li>
 
 
   </ul>
 </div>
-<div class="content">
+  </div>
+
+ <div class="col-9">
+
+<h1>Welcome to eduCare</h1>
+</div>
 
 </div>
+  </div>
+  </div>
+
+
+
+
