--- a/src/app/students/student-dashboard/student-dashboard.component.html
+++ b/src/app/students/student-dashboard/student-dashboard.component.html
@@ -10,7 +10,7 @@
 <div class="sidebar">
   <ul class="list-unstyled">
     <li>
-      <a href="/studentProfile">
+      <a href="/profile">
         <i class="bi bi-person-circle" width="25" height="25"></i> My Profile
         <!-- <i class="bi bi-chevron-right" style="float: right;"></i> -->
       </a>
