--- a/src/app/profiles/edit/edit.component.html
+++ b/src/app/profiles/edit/edit.component.html
@@ -1,59 +1,48 @@
 <div class="body">
   <div class="container">
-  <div class="row">
-    <!-- <div class="col-3">
-      <app-admin-dashboard></app-admin-dashboard>
-    </div> -->
+    <div class="row">
 
-    <!-- <div class="col-9"> -->
+
+      <!-- <div class="col-9"> -->
       <h1> Edit Personal Information</h1>
       <div class="info">
-               <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
+        <form (ngSubmit)="updateUserInfo()" #courseForm="ngForm">
 
-      <!-- <div class="profile-card"> -->
-        <!-- <div class="col-4 position-relative">
-          <img src="UserImage/girlUser.jpg" alt="Add Profile picture" class="img-fluid rounded shadow">
-          <div class="card-img-overlay d-flex justify-content-center align-items-center">
-            <span class="edit-icon">
-              <i class="bi bi-pen-fill">Edit</i>
-            </span>
-          </div>
-        </div> -->
-            <h2>Name:</h2>
-            <h4>User Id:</h4>
+           <input type="hidden" name="id" [(ngModel)]="currentUser.id" hidden /><br />
 
-    <!-- </div> -->
 
           <!-- <div class="col-8"> -->
-
-                <div class="mb-3">
-                  <label for="fatherName" class="form-label">👨‍👩‍👧 Father's Name:</label>
-                  <input type="text" class="form-control" id="fatherName" >
-                </div>
-                <div class="mb-3">
-                  <label for="motherName" class="form-label">👩 Mother's Name:</label>
-                  <input type="text" class="form-control" id="motherName" >
-                </div>
-                <!-- <div class="mb-3">
-                  <label for="email" class="form-label">📧 Email:</label>
-                  <input type="email" class="form-control" id="email" >
-                </div> -->
-                <div class="mb-3">
-                  <label for="phoneNo" class="form-label">📞 Phone No:</label>
-                  <input type="text" class="form-control" id="phoneNo">
-                </div>
-
-                <div class="mb-3">
-                  <label for="address" class="form-label">🌍 Address:</label>
-                  <input type="text" class="form-control" id="address" >
-                </div>
-                <button type="submit" class="btn btn-primary">Save Changes</button>
-              </form>
-            </div>
+          <div class="mb-3">
+            <label for="name" class="form-label"> Name:</label>
+            <input type="text" class="form-control" name="name" [(ngModel)]="currentUser.name">
           </div>
-        </div>
+
+          <div class="mb-3">
+            <label for="fatherName" class="form-label">👨 Father's Name:</label>
+            <input type="text" class="form-control" id="fatherName" name="fatherName" [(ngModel)]="currentUser.fatherName">
+          </div>
+          <div class="mb-3">
+            <label for="motherName" class="form-label">👩 Mother's Name:</label>
+            <input type="text" class="form-control" name="motherName" [(ngModel)]="currentUser.motherName">
+          </div>
+          <div class="mb-3">
+                  <label for="email" class="form-label">📧 Email:</label>
+                  <input type="email" class="form-control" name="email" [(ngModel)]="currentUser.email">
+                </div>
+          <div class="mb-3">
+            <label for="phone" class="form-label">📞 Phone No:</label>
+            <input type="text" class="form-control" name="phone" [(ngModel)]="currentUser.phone">
+          </div>
+
+          <div class="mb-3">
+            <label for="address" class="form-label">🌍 Address:</label>
+            <input type="text" class="form-control" name="address" [(ngModel)]="currentUser.address">
+          </div>
+
+
+          <button type="submit" class="btn btn-primary">Save Changes</button>
+        </form>
       </div>
-
-
-
-
+    </div>
+  </div>
+</div>
