--- a/src/app/profiles/profile/profile.component.html
+++ b/src/app/profiles/profile/profile.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="d-flex justify-content-between">
 
-        <button class="btn btn-warning" (click)="onEditUserInfo()">
+        <button class="btn btn-warning" (click)="onEditUserInfo(currentUser)">
           <i class="bi bi-lock-fill me-1"></i>Edit Profile
         </button>
 
