--- a/src/app/enrollments/enrollment/enrollment.component.html
+++ b/src/app/enrollments/enrollment/enrollment.component.html
@@ -27,10 +27,10 @@
     </div>
 
     <!-- Confirm Mobile No Field -->
-    <div>
+    <!-- <div>
       <label for="cmobile">Confirm Mobile No:</label>
       <input type="text" id="cmobile" name="cmobile" [(ngModel)]="enrollments.confirmMobile" required />
-    </div>
+    </div> -->
 
     <!-- Payment Method Field -->
     <div>
