--- a/src/app/students/student-dashboard/student-dashboard.component.html
+++ b/src/app/students/student-dashboard/student-dashboard.component.html
@@ -16,7 +16,7 @@
       </a>
     </li>
     <li>
-      <a href="/courses">
+      <a href="/myCourses">
         <i class="bi bi-incognito"></i> My Courses
       </a>
     </li>
