--- a/src/app/teachers/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/teachers/teacher-dashboard/teacher-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <ul class="list-unstyled">
       <li>
-          <a href="/teacherProfile">
+          <a href="/profile">
             <i class="bi bi-person-circle" width="25" height="25"></i> My Profile
               <!-- <i class="bi bi-chevron-right" style="float: right;"></i> -->
           </a>
