--- a/src/app/courses/mycourses/mycourses.component.html
+++ b/src/app/courses/mycourses/mycourses.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 mb-4" *ngFor="let course of course">
+<div class="col-md-4 mb-4" *ngFor="let course of courses">
   <div class="card shadow-lg rounded-4">
         <!-- Course Image -->
         <img [src]="course.image" class="card-img-top img-fluid book-image" alt="Course Image">
